# hello-travis

./: .appveyor.yml  .travis.yml  CMakeLists.txt  appveyor.yml  travis.yml
include/: hello.h
src/: hello.cpp  main.cpp
test/: CMakeLists.txt  test_hello.cpp  test_hi.cpp
tests/: CMakeLists.txt  test_hello.cpp
